# checkmate

./: .gitignore  PRD.md  README.md  REQUIREMENTS.md  RUBRIC.md  example.html  justfile  lichess.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  serve.py
checkmate/: README.md  browser-polyfill.js  content.js  icon_instructions.txt  manifest-firefox.json  manifest.json  options.html  options.js  popup.html  popup.js
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/chess/: ChessBoard.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/pages/: AnalysisPage.tsx  DashboardPage.tsx  GamesPage.tsx  SettingsPage.tsx
scripts/: capture_study_screenshots.py  inspect_puzzle.py
src/: db.py  engine.py  ingest.py  llm.py  phase.py  render.py  scorer.py  study_plan.py
src/checkmate/: __init__.py  console.py  lichess.py
src/web/: app.js  index.html  styles.css
tests/: test_ingest.py  test_render_bundle.py  test_study_plan.py  test_study_ui.py
