[project]
name = "checkmate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom Bedor", email = "tombedor@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "berserk>=0.13.2",
    "pydantic>=2.11.7",
]

[project.scripts]
checkmate = "checkmate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
